Составлен запрос на выборку типов комнат для карты #30

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -104,3 +104,9 @@ commands:
         alias:
         - close
         - закрыть
+
+    test:
+        type: action
+        alias:
+        - test
+        - тест
