--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -1,3 +1,9 @@
+##################################################
+#                                                #
+#   Список комнат зоны "Городская Канализация"   #
+#                                                #
+##################################################
+
 rooms:
     sewersenter:
         name: "Спуск в канализацию"
