Озеленение городского парка

--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -200,7 +200,7 @@ rooms:
     park1:
         name: "Городской парк"
         desc: "Здесь, в окружении стройных цветущих деревьев, царит покой и умиротворение, поэтому неудивительно, что городской парк является излюбленным местом отдыха горожан. Это место также служит домом для многочисленных птиц, звонкие трели которых доносятся со всех сторон, да мелких животных, попадающих иногда в поле зрения между кустов и с ветвей деревьев."
-        type: town
+        type: forest
         mobs:
         - boy1
         exits:
@@ -211,7 +211,7 @@ rooms:
     park2:
         name: "Городской парк"
         desc: "Похоже, что жители этого города просто обожают фонтаны, по крайней мере здесь их полным полно, от маленьких в виде статуй писающих мальчиков, до больших в виде переливающихся водопадов. Отсюда во все стороны отходят одинаковые аккуратные аллеи, в которых заметен многолетний труд искусных садовников."
-        type: town
+        type: forest
         mobs:
         - cityguard
         exits:
@@ -223,14 +223,14 @@ rooms:
     park3:
         name: "Городской парк"
         desc: "Вы находитесь среди аккуратных разноцветных клумб, на которых старательные садовники попытались изобразить знаковые для жителей этого города символы. Тут можно найти и выложенные из цветов гербы знатных семейств, и схематичные изображения окрестных достопримечательностей от скульптур до зданий."
-        type: town
+        type: forest
         exits:
             south: park2
 
     park4:
         name: "Городской парк"
         desc: "Тут вдоль выложенных камнем дорожек в два ряда: слева и справа установлены одинаковые удобные скамейки, так что прогулка по парку не будет в тягость даже самому старому жителю этого города. А, по вечерам здесь непередаваемо красиво из-за разноцветных фонариков, развешанных по столбам, и разгоняющих темноту ночи без остатка."
-        type: town
+        type: forest
         mobs:
         - woman1
         exits:
@@ -239,7 +239,7 @@ rooms:
     park5:
         name: "Около беседки"
         desc: "Вы остановились перед прелестной белой беседкой, установленной в этой части парка. У нее тонкие изящные колонны, до половины обвитые зелеными стеблями плюща. Неудивительно, что это место так популярно среди влюбленных парочек, от этого места даже у самого черствого человека глаза заполнятся слезами умиления."
-        type: town
+        type: forest
         mobs:
         - boy2
         - girl1
