--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/zonelist.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/zonelist.yml
@@ -14,5 +14,5 @@ zonelist:
 
     sewers:
         name: "Городская канализация"
-    galaxy:
-        name: "Космическое пространство"
+    starships:
+        name: "Звездолеты"
