Добавлена команда моментального перемещения - jumpto/прыжок

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -110,3 +110,8 @@ commands:
         alias:
         - test
         - тест
+    jumpto:
+        type: system
+        alias:
+        - jumpto
+        - прыжок
