Команда телепортации к игроку #60

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -115,3 +115,8 @@ commands:
         alias:
         - jumpto
         - прыжок
+    jumptp:
+        type: system
+        alias:
+        - jumptp
+        - телепорт
