Описание предмета в файле зоны #61

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -136,3 +136,22 @@ mobs:
         DX: 5
         IQ: 0
         HT: 1
+
+#####################################################
+#                                                   #
+#   Список предметов зоны "Городская Канализация"   #
+#                                                   #
+#####################################################
+
+items:
+    moss:
+        type: decor
+        name:
+        - "мох"
+        - "мха"
+        - "мху"
+        - "мох"
+        - "мхом"
+        - "мхе"
+        short: "Зеленоватый мох покрыл поверхность камня зловонным ковром."
+        desc: "Зеленый мох выглядит мягким и податливым, а если наступить, то из него вытекает липкая жижа."
