Добавлен импорт предметов лежащих на полу из файла зоны в базу  #53 #62

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -20,6 +20,8 @@ rooms:
         mobs:
         - rat
         - slime
+        items:
+        - moss
         exits:
             up: sewersenter
             north: sewersn2
