В зону добавлен предмет

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -22,6 +22,7 @@ rooms:
         - slime
         items:
         - moss
+        - moss
         exits:
             up: sewersenter
             north: sewersn2
