--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -48,6 +48,8 @@ rooms:
         type: town
         mobs:
         - citizen
+        items:
+        - statue
         exits:
             north: street
             south: crossroads
@@ -1010,3 +1012,24 @@ mobs:
         DX: 10
         IQ: 10
         HT: 10
+
+#############################
+#                           #
+#   Список предметов зоны   #
+#                           #
+#############################
+
+items:
+    statue:
+        type: decor
+        name:
+        - "статуя"
+        - "статуи"
+        - "статуе"
+        - "статую"
+        - "статуей"
+        - "статуе"
+        short: "Статуя Первооткрывателю высится в центре площади."
+        desc: "Статуя изображает человека, который вопреки трудостям непоколебимо идет к своей заветной цели - исследованию нового."
+        
+
