--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -49,7 +49,7 @@ rooms:
         mobs:
         - citizen
         items:
-        - statue
+        - monument
         exits:
             north: street
             south: crossroads
@@ -1020,16 +1020,16 @@ mobs:
 #############################
 
 items:
-    statue:
+    monument:
         type: decor
         name:
-        - "статуя"
-        - "статуи"
-        - "статуе"
-        - "статую"
-        - "статуей"
-        - "статуе"
-        short: "Статуя Первооткрывателю высится в центре площади."
-        desc: "Статуя изображает человека, который вопреки трудостям непоколебимо идет к своей заветной цели - исследованию нового."
+        - "монумент"
+        - "монумента"
+        - "монументу"
+        - "монумент"
+        - "монументом"
+        - "монументе"
+        short: "Монумент изображающий Первооткрывателя высится в центре площади."
+        desc: "Монумент изображает человека, который вопреки трудостям непоколебимо идет к своей заветной цели - исследованию нового."
         
 
